force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Answer__c/fields/agf__Question__c.field-meta.xml
<CustomField>
    <fullName>agf__Question__c</fullName>
    <label>Question</label>
    <referenceTo>agf__QA_Question__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>