force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Answer__c/fields/agf__Test_Plan__c.field-meta.xml
<CustomField>
    <fullName>agf__Test_Plan__c</fullName>
    <label>Test Plan</label>
    <referenceTo>agf__QA_Test_Plan__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>